--- a/index.html
+++ b/index.html
@@ -3,151 +3,94 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Scroll to Unlock Knowledge</title>
+  <title>5 Deep Conscious Pages</title>
   <style>
     * {
-      margin: 0;
-      padding: 0;
+      margin: 0; padding: 0;
       box-sizing: border-box;
     }
 
-    body {
+    html, body {
+      height: 100%;
+      scroll-behavior: smooth;
       font-family: 'Segoe UI', sans-serif;
-      overflow-x: scroll;
-      overflow-y: hidden;
-      background-color: #000;
-      color: #fff;
+      overflow-x: hidden;
+    }
+
+    section {
+      width: 100%;
       height: 100vh;
+      padding: 60px 40px;
       display: flex;
-    }
-
-    .neon-strip {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      padding: 12px 0;
-      text-align: center;
-      background: linear-gradient(90deg, #00f5ff, #ff00c8, #00f5ff);
-      color: #fff;
-      font-weight: bold;
-      font-size: 18px;
-      z-index: 999;
-      box-shadow: 0 0 10px #00f5ff, 0 0 20px #ff00c8;
-      animation: glow 2s infinite linear;
-    }
-
-    @keyframes glow {
-      0% { background-position: 0% }
-      100% { background-position: 100% }
-    }
-
-    .scroll-section {
-      display: flex;
-      width: 300vw;
-      height: 100vh;
-      position: relative;
-    }
-
-    .panel {
-      flex: 0 0 100vw;
-      height: 100vh;
-      padding: 100px 40px 40px;
-      position: relative;
-    }
-
-    .black-overlay {
-      background-color: rgba(0,0,0,0.8);
-      padding: 20px;
-      border-radius: 20px;
-      box-shadow: 0 0 20px #111;
-    }
-
-    .image-box {
-      max-width: 300px;
-      margin: 20px auto;
-      display: block;
-      border-radius: 10px;
-      box-shadow: 0 0 10px #fff3;
-    }
-
-    .buy-button {
-      display: inline-block;
-      margin-top: 20px;
-      padding: 12px 24px;
-      background-color: #00f5ff;
-      color: #000;
-      text-decoration: none;
-      font-weight: bold;
-      border-radius: 8px;
-      box-shadow: 0 0 10px #00f5ff;
-      transition: 0.3s;
-    }
-
-    .buy-button:hover {
-      background-color: #00c9cc;
-    }
-
-    .privacy-box {
-      margin-top: 20px;
-      display: flex;
+      flex-direction: column;
+      justify-content: center;
       align-items: center;
-      gap: 10px;
+      color: white;
+      text-align: center;
     }
 
-    .privacy-box input[type="checkbox"] {
-      transform: scale(1.4);
+    h1 {
+      font-size: 2.7rem;
+      margin-bottom: 20px;
+      text-shadow: 0 0 10px rgba(0,0,0,0.6);
     }
 
-    .privacy-box label {
-      font-size: 14px;
-      max-width: 80%;
+    p {
+      font-size: 1.2rem;
+      line-height: 1.8;
+      max-width: 900px;
+      text-shadow: 0 0 6px rgba(0,0,0,0.4);
     }
+
+    /* Backgrounds */
+    .page1 { background: linear-gradient(135deg, #0f2027, #203a43); }
+    .page2 { background: linear-gradient(135deg, #2c3e50, #4ca1af); }
+    .page3 { background: linear-gradient(135deg, #1e3c72, #2a5298); }
+    .page4 { background: linear-gradient(135deg, #8e44ad, #c0392b); }
+    .page5 { background: linear-gradient(135deg, #f39c12, #d35400); }
   </style>
 </head>
 <body>
 
-  <!-- Neon Header -->
-  <div class="neon-strip">⬅️ Scroll Right to Download & Read ✨ Knowledge Awaits</div>
+<!-- Page 1 -->
+<section class="page1">
+  <h1>1. What is Vibration in Consciousness?</h1>
+  <p>
+    Everything is vibration — from thoughts to light to memory. In consciousness, vibration determines the quality of awareness. Low vibration clouds clarity. High vibration sharpens it. You don’t need to change your life. Just raise your vibration, and life changes itself.
+  </p>
+</section>
 
-  <!-- Scrollable Panels -->
-  <div class="scroll-section">
+<!-- Page 2 -->
+<section class="page2">
+  <h1>2. Can Trees Move? Stillness Is Motion</h1>
+  <p>
+    Trees move in ways unseen. They feel intention. They adapt their roots. They transfer frequency through silence. In quantum stillness, they journey not across space, but through vibration. The forest is not still — it is deeply alive in slow motion.
+  </p>
+</section>
 
-    <!-- Panel 1: Intro -->
-    <div class="panel">
-      <div class="black-overlay">
-        <h1>🚀 Welcome to Your Digital Knowledge Portal</h1>
-        <p>Here, you unlock power-packed insights curated to help you grow in the digital world. Scroll right to discover.</p>
-        <img class="image-box" src="https://i.ibb.co/nsRbTz4d/IMG-1396.jpg" alt="Your Photo"/>
-      </div>
-    </div>
+<!-- Page 3 -->
+<section class="page3">
+  <h1>3. What Is a Human?</h1>
+  <p>
+    A human is a portal — spirit wrapped in story. You are not your mind, your job, or your history. You are a field of awareness experiencing reality through filters. Your potential isn’t in what you become, but what you remember you are.
+  </p>
+</section>
 
-    <!-- Panel 2: Book Display -->
-    <div class="panel">
-      <div class="black-overlay">
-        <h2>📘 Featured Book:</h2>
-        <p><strong>Actionable Guide To Digital Marketing For Beginners</strong></p>
-        <img class="image-box" src="https://i.ibb.co/jPSDTcMy/51-WGz3rkb-HL-SL1000.jpg" alt="Book Cover"/>
-        <a class="buy-button" href="https://www.amazon.in/Actionable-Guide-Digital-Marketing-Beginners-ebook/dp/B0DZV2BTN9" target="_blank">Buy on Amazon</a>
-      </div>
-    </div>
+<!-- Page 4 -->
+<section class="page4">
+  <h1>4. Where Do Thoughts Come From?</h1>
+  <p>
+    Thoughts are not created — they are tuned into. Like a radio station, your mind receives signals based on your internal frequency. Some thoughts are yours. Many are not. The art is in choosing which to believe, and which to release like clouds.
+  </p>
+</section>
 
-    <!-- Panel 3: Privacy & Consent -->
-    <div class="panel">
-      <div class="black-overlay">
-        <h2>✅ Privacy Policy</h2>
-        <p>By checking the box below, you agree to receive personalized promotional messages, offers, and updates related to your digital interests. You can unsubscribe anytime.</p>
-
-        <div class="privacy-box">
-          <input type="checkbox" id="privacy" name="privacy" />
-          <label for="privacy">I accept the privacy policy and agree to receive promotional messages based on my interest.</label>
-        </div>
-
-        <p style="margin-top: 20px; font-size: 13px; color: #aaa;">This digital platform respects your privacy. Your info will not be shared or sold to third parties.</p>
-      </div>
-    </div>
-
-  </div>
+<!-- Page 5 -->
+<section class="page5">
+  <h1>5. Why Consciousness Matters in 2025</h1>
+  <p>
+    In the age of AI, noise, and simulation, consciousness is your only compass. It's the only thing you truly own. Attention is currency. Presence is power. In 2025 and beyond, your inner clarity will define your outer reality. Protect it like sacred fire.
+  </p>
+</section>
 
 </body>
 </html>
